# image-resize-demo

./: .gitignore  README.md
api/: Cargo.toml
api/src/: main.rs
functions/: Cargo.toml  host.json
functions/process_image_resize/: function.json
functions/src/: main.rs
