[package]
name = "image-processor-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1.12", features = ["macros", "fs", "rt-multi-thread"] }
futures = { version = "0.3", default-features = false }
bytes = "1.0"
azure_core = "0.20.0"
azure_storage = "0.20.0"
azure_storage_blobs = "0.20.0"
azure_messaging_servicebus = "0.20.0"
serde = "1.0.200"
serde_json = "1.0"
